@@ -164,6 +164,29 @@ qn.ttdistcalcachro <- function(f1,f2,qn1, qn2, n4,v){
 		}
 
 
+# monodistcalc <- function(f1,f2,w1){
+        # dq1 <- f1[1]-f2[1]
+
+		# numer<-	(dq1)^2
+		
+		# denom<- w1
+			
+		# as.numeric(sqrt(numer/denom))
+		# }
+
+# qn.monodistcalc <- function(f1, f2, qn1, qn2, n1, v){
+        # dq1 <- f1[1]-f2[1]
+
+        # w1 <- sqrt((v^2/n1) + (2/(qn1[1]+qn2[1])))
+		
+		# numer<-	(dq1-dq2)^2
+		
+		# denom<- w1
+			
+		# as.numeric(sqrt(numer/denom))
+		# }
+
+
 ###################
 #SUMMARY VARIABLES#
 ###################
