@@ -1,16 +1,16 @@
 citHeader("To cite package pavo in publications use:")
 
 citEntry(entry="Article",
-    title = "pavo: an R package for the analysis, visualization and organization of spectral data",
+    title = "pavo: an R Package for the analysis, visualization and organization of spectral data",
     author = personList(as.person("Rafael Maia"),
     as.person("Chad M. Eliason"),
     as.person("Pierre-Paul Bitton"),
     as.person("Stephanie M. Doucet"),
     as.person("Matthew D. Shawkey")
     ),
-	journal = "submitted",
+	journal = "Methods in Ecology and Evolution",
     year = "2013",
 	volume = "",
 	pages = "",
-
-    textVersion = "Maia R., Eliason C.M., Bitton P.-P., Doucet S.M. and Shawkey M.D. pavo: an R package for the analysis, visualization and organization of spectral data. Submitted.")
+    doi = "10.1111/2041-210X.12069",
+    textVersion = "Maia R., Eliason C.M., Bitton P.-P., Doucet S.M. and Shawkey M.D. 2013. pavo: an R Package for the analysis, visualization and organization of spectral data. Methods in Ecology and Evolution. Available online: doi: 10.1111/2041-210X.12069")
