@@ -449,19 +449,21 @@ colnames(d23) <- c('mean', 'se')
 <<label=distplot,fig=TRUE,echo=FALSE,results=hide,include=FALSE,width=7,height=7>>=
 rs <- names(sort(rank(rowMeans(cbind(d12[,1], d13[,1], d23[,1])))))
 pal <- brewer.pal(7, "Set1")
+
+civals <- qt(0.025, 3)
 # Dotplot of colour distances
 layout(matrix(c(1,2,1,3), nrow=2))
 pad <- .35
 par(mar=c(4,4,2,2), oma=c(2,0,0,0), xpd=FALSE, ps=12)
-plot(d23[rs,1], ylim = c(0, 11), xlab = "", 
+plot(d23[rs,1], ylim = c(0, 15), xlab = "", 
      ylab = '', xaxt = 'n', 
      pch = 21, xlim = c(0.5, 22), type='n')
-segments(seq(1,22,by=2)-pad, d12[rs, 1] - d12[rs, 2], seq(1,22,by=2)-pad, 
-         d12[rs, 1] + d12[rs, 2])
-segments(seq(1,22,by=2), d13[rs, 1] - d13[rs, 2], seq(1,22,by=2), d13[rs, 1] + 
-         d13[rs, 2])
-segments(seq(1,22,by=2)+pad, d23[rs, 1] - d23[rs, 2], seq(1,22,by=2)+pad, 
-         d23[rs, 1] + d23[rs, 2])
+segments(seq(1,22,by=2)-pad, d12[rs, 1] - civals*d12[rs, 2], seq(1,22,by=2)-pad, 
+         d12[rs, 1] + civals*d12[rs, 2])
+segments(seq(1,22,by=2), d13[rs, 1] - civals*d13[rs, 2], seq(1,22,by=2), d13[rs, 1] + 
+         civals*d13[rs, 2])
+segments(seq(1,22,by=2)+pad, d23[rs, 1] - civals*d23[rs, 2], seq(1,22,by=2)+pad, 
+         d23[rs, 1] + civals*d23[rs, 2])
 points(d12[rs, 1]~I(seq(1,22,by=2)-pad), pch = 21, bg = 'black', cex=1.2)
 points(d13[rs, 1]~seq(1,22,by=2), pch = 21, bg = 'grey', cex=1.2)
 points(d23[rs,1]~I(seq(1,22,by=2)+pad), pch = 21, bg = 'white', cex=1.2)
@@ -470,7 +472,7 @@ abline(h = 1, lty = 3)
 axis(side = 1, at = seq(1,22,by=2), labels = rep('',11), las = 1, cex.axis=0.9)
 text(seq(1,22,by=2),par("usr")[3]-0.7,srt=35,adj=1,labels=rs,xpd=T,cex=1.1)
 mtext(side = 2, expression(paste(Delta, "S (JNDs)")), line=2.5)
-mtext(side = 1, "plumage patch", line=3.5)
+mtext(side = 1, "Plumage patch", line=3.5)
 par(font=3)
 legend('topleft', bty='n', pch=c(21,21,21), cex=1.2,
        legend = c("acuticaudus-chloropterus", "acuticaudus-elisabeth",
@@ -499,11 +501,25 @@ spp2 <- substr(row.names(colr), 1, 4)
 df <- data.frame(H1 = colr$H1)
 df$spp <- spp2
 df$spp <- factor(df$spp, labels=c('acuticaudus', 'chloropterus', 'elisabeth'))
-boxplot(H1~spp, df, xlab="Species", ylab="Hue (nm)", xaxt='n', lty=1, 
-        lwd=1.5, cex.lab=1.2, col=pal, staplewex=0.2)
-axis(1, 1:3, levels(df$spp), cex.axis= 0.8, font=3)
+#boxplot(H1~spp, df, xlab="Species", ylab="Hue (nm)", xaxt='n', lty=1, 
+#        lwd=1.5, cex.lab=1.2, col=pal, staplewex=0.2)
+df$sppcont <- rep(1:3, each=4)
+transpcols = data.frame(cbind(t(col2rgb(pal[c(1:3)]))/255, alpha=rep(0.6,3)))
+transpcols = rgb(red=transpcols$red, green=transpcols$green, blue=transpcols$blue, alpha=transpcols$alpha)
+#rep(pal[1:3], each=4)
 
-mtext("C", at=-0.4, line=-1.5, cex=1.5, font=2)
+plot(H1~sppcont, data=df, ylim=c(425,535), xlim=c(0.7,3.3), 
+     col=rep(transpcols, each=4),  lwd=0, xaxt='n',
+    xlab='Species', ylab="Hue (nm)", cex.lab=1.2, pch=19, cex=1.2 )
+axis(1, 1:3, paste("L.",levels(df$spp)), cex.axis= 0.8, font=3)
+
+sppmeans <- tapply(df$H1, df$sppcont, mean)
+
+#segments(1:3-0.2, sppmeans, 1:3+0.2, sppmeans, lwd=3)
+segments(1:3-0.2, sppmeans, 1:3+0.2, sppmeans, lwd=3, col=pal)
+
+
+mtext("C", at=-.05, line=-1.5, cex=1.5, font=2)
 @
 
 <<echo=TRUE, figure=FALSE>>=
